--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
-<h1>Главная</h1>
-<p>Добро пожаловать!</p>
+<div class="page">
+  <h1>Чат-бот Вышки</h1>
+  <p>Я создан для помощи абитуриентам!</p>
+</div>
+
 <app-chat-popup></app-chat-popup>
