--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="page">
-  <h1>Чат-бот Вышки</h1>
-  <p>Я создан для помощи абитуриентам!</p>
+  <p class="title">HSE Study Help</p>
+  <p>Я бот, созданный  для помощи и информирования студентов, преподавателей и сотрудников Вышки!<br/>Всегда рад помочь)</p>
 </div>
 
 <app-chat-popup></app-chat-popup>
