--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+p{
+  text-align: center;
+}
+
 .page {
   width: 100%;
   height: 100%;
@@ -9,4 +13,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.title{
+  font-weight: 800;
+  font-size: 36px;
 }
