--- a/src/app/features/chat/chat-popup/chat-popup.component.html
+++ b/src/app/features/chat/chat-popup/chat-popup.component.html
@@ -2,6 +2,6 @@
 
 @if (open) {
   <div class="popup">
-    <app-chat-window (close)="toggle()"></app-chat-window>
+    <app-chat (close)="toggle()"></app-chat>
   </div>
 }
