--- a/src/app/features/chat/chat-popup/chat-popup.component.scss
+++ b/src/app/features/chat/chat-popup/chat-popup.component.scss
@@ -103,6 +103,11 @@
   justify-content: center;
   font-size: 11px;
   font-weight: 600;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .chat-popup__title {
@@ -201,8 +206,8 @@
 
 .chat-message__avatar {
   flex-shrink: 0;
-  width: 22px;
-  height: 22px;
+  width: 30px;
+  height: 30px;
   border-radius: 999px;
   background: #e5e7eb;
   display: flex;
@@ -527,4 +532,15 @@
   margin: 0;
   font-size: 11px;
   color: #b91c1c; // спокойный красный
+}
+
+
+.chat-message__avatar-icon{
+  width: 30px;
+  height: 30px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
